fixed editing role

--- a/views/edit-profile.ejs
+++ b/views/edit-profile.ejs
@@ -12,6 +12,7 @@
         
         <form action="/user/update" method="POST">
             <input type="hidden" name="id" value="<%= user.id %>">
+            <input type="hidden" name="role" value="<%= user.role %>">
             
             <div class="mb-3">
                 <label>Login</label>
